@@ -7,6 +7,7 @@ copyright_year = 1997
 [@DROLSKY]
 dist = Time-Local
 stopwords = Christiansen
+stopwords = google
 stopwords = nocheck
 use_github_issues = 1
 DROLSKY::WeaverConfig.include_donations_pod = 0
